# TimeSformer

./: M24.md  README.md  pyproject.toml  run_in_docker.sh
configs/: dry_run_local.yaml  feature_extraction_local.yaml  feature_extraction_par.yaml  given_detection_detection_feedback_local.yaml  given_detection_detection_feedback_par.yaml  given_detection_local.yaml  given_detection_par.yaml  system_detection.yaml  system_detection_classification_feedback_local.yaml  system_detection_classification_feedback_par.yaml  system_detection_label_feedback_local.yaml  system_detection_label_feedback_par.yaml  system_detection_local.yaml  system_detection_par.yaml  system_detection_par_resume.yaml
configs/M24/: TimeSformer_divST_8x32_224_4gpus.yaml  TimeSformer_divST_8x32_224_TEST.yaml  TimeSformer_divST_8x32_224_evm.yaml
configs/M30/: TimeSformer_divST_8x32_224_4gpus.yaml  TimeSformer_divST_8x32_224_TEST.yaml  TimeSformer_divST_8x32_224_evm.yaml
configs/algorithms/: finetune_windowed_mean_kldiv.yaml  timesformer_base.yaml  timesformer_characterization.yaml  timesformer_detection_feedback.yaml  timesformer_feedback.yaml  timesformer_rd.yaml
configs/hydra/launcher/: veydrus.yaml
configs/self_eval/: TimeSformer_divST_8x32_224_4gpus.yaml  TimeSformer_divST_8x32_224_TEST.yaml  TimeSformer_divST_8x32_224_evm.yaml
timesformer/: adaptive_timesformer_adapter.py  adaptive_timesformer_detector.py  kl_divergence.py  timesformer_adapter.py  timesformer_characterization.py  timesformer_characterization_adapter.py  timesformer_detector.py  timesformer_rd_adapter.py  timesformer_rd_detector.py  timesformer_with_detection_feedback.py  timesformer_with_detection_feedback_adapter.py
timesformer/config/: defaults.py
timesformer/datasets/: kinetics.py  loader.py  m24.py  ta2.py  ucf101.py
timesformer/models/: vit.py
timesformer/utils/: meters.py  metrics.py  realign_logits.py
tools/: convert_TA2_cls.py  kl_finder.py  test_net.py  train_evm.py  train_net.py  transfer_model.py
(+14 files in other folders)
