[tool.poetry]
name = "timesformer"
version = "1.0.0"
description = "Fork of timesformer"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
sail-on-client = {git = "https://github.com/darpa-sail-on/sail-on-client.git", rev = "master"}
einops = ">=0.3"
torch = "==1.8.1"
torchvision = "==0.9.1"
simplejson = "^3.17.5"
timm = "^0.4.12"
psutil = "^5.8.0"
scikit-learn = "^1.0.1"
opencv-python = "^4.5.4.58"
tensorboard = "^2.7.0"
fvcore = "^0.1.5"
av = "^8.0.3"
vast = {git = "https://github.com/prijatelj/vast.git", rev = "update-atol-precision"}
exputils = "^0.1.5"
pkbar = "^0.5"
pyflann-py3 = "^0.1.0"
hydra-submitit-launcher = "^1.1.6"

[tool.poetry.dev-dependencies]

[tool.poetry.extras]
tensorboard_video_visualization = ["moviepy"]

[build-system]
requires = ["poetry-core>=1.0.0", "torch>=1.8.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."smqtk_plugins"]
timesformer = "timesformer.timesformer_adapter"
timesformer_rd = "timesformer.timesformer_rd_adapter"
timesformer_detection_feedback = "timesformer.timesformer_with_detection_feedback_adapter"
